<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/ListVerticalLinearLayout">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/amount"/>

        <TextView
            style="@style/ListValue"
            android:id="@+id/value"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="5dp"
            style="@style/ListValue"
            android:id="@+id/currency"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/account"/>

        <TextView
            style="@style/ListValue"
            android:id="@+id/fromAccNumber"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/bank"/>

        <TextView
            style="@style/ListValue"
            android:id="@+id/fromBank"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/iban"/>

        <TextView
            style="@style/ListValue2"
            android:id="@+id/fromIBAN"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/specificSymbol"/>

        <TextView
            style="@style/ListValue"
            android:id="@+id/fromSpecSymb"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/constantSymbol"/>

        <TextView
            style="@style/ListValue"
            android:id="@+id/fromConstantSymb"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/dueDate"/>

        <TextView
            style="@style/ListValue2"
            android:id="@+id/dueDate"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            style="@style/ListTitle"
            android:layout_height="wrap_content"
            android:text="@string/processingDate"/>

        <TextView
            style="@style/ListValue2"
            android:id="@+id/processingDate"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>